# plamo-2-translate-srt

./: main.py  pyproject.toml  sample.srt  sample_src.srt  sample_translated.srt
